<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/steps_settings_title">
            
        <ListPreference
                android:key="sensitivity"
                android:title="@string/sensitivity_setting"
                android:summary="@string/sensitivity_setting_details"
                android:entries="@array/sensitivity_preference"
                android:entryValues="@array/sensitivity_preference_values"
                android:dialogTitle="@string/sensitivity_setting_title"
                android:defaultValue="30" />

        <com.citsin.pedometer.preferences.StepLengthPreference
                android:key="step_length"
                android:title="@string/step_length_setting"
                android:summary="@string/step_length_setting_details"
                android:dialogTitle="@string/step_length_setting_title"
                android:defaultValue="20" />
            
        <com.citsin.pedometer.preferences.BodyWeightPreference
                android:key="body_weight"
                android:title="@string/body_weight_setting"
                android:summary="@string/body_weight_setting_details"
                android:dialogTitle="@string/body_weight_setting_title"
                android:defaultValue="50" />
            
        <ListPreference
                android:key="exercise_type"
                android:title="@string/exercise_type_setting"
                android:summary="@string/exercise_type_setting_details"
                android:entries="@array/exercise_type_preference"
                android:entryValues="@array/exercise_type_preference_values"
                android:dialogTitle="@string/exercise_type_setting_title"
                android:defaultValue="running" />


    </PreferenceCategory>
                



    
</PreferenceScreen>